simplify the code